[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/UI/confirmMenuOption.gd" type="Script" id=1]
[ext_resource path="res://Sprites/General/darkBlueBox.png" type="Texture" id=2]
[ext_resource path="res://Sprites/General/IMG_0019.PNG" type="Texture" id=3]

[node name="confirmMenuOption" type="Node2D"]
pause_mode = 2
position = Vector2( 514.975, 165.925 )
scale = Vector2( 1.42266, 1.57578 )
z_index = 3999
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -0.19329, -21.3545 )
scale = Vector2( 1.68039, 1.44026 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.607843, 0.607843, 0.607843, 1 )
position = Vector2( -0.193282, -21.6469 )
scale = Vector2( 0.175141, 0.297479 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -44.0
margin_top = -53.0
margin_right = 45.0
margin_bottom = -20.0
text = "?"
align = 1
autowrap = true

[node name="yes" type="Button" parent="."]
margin_left = -47.0
margin_top = 1.0
margin_right = -15.0
margin_bottom = 21.0

[node name="Sprite" type="Sprite" parent="yes"]
modulate = Color( 0, 0.588235, 0, 0.784314 )
position = Vector2( 16, 10 )
scale = Vector2( 0.48, 0.28 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="yes"]
margin_right = 32.0
margin_bottom = 20.0
text = "Y"
align = 1
valign = 1

[node name="no" type="Button" parent="."]
margin_left = 15.0
margin_top = 1.0
margin_right = 47.0
margin_bottom = 21.0

[node name="Sprite" type="Sprite" parent="no"]
modulate = Color( 0.588235, 0, 0, 0.784314 )
position = Vector2( 16, 10 )
scale = Vector2( 0.48, 0.28 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="no"]
margin_right = 32.0
margin_bottom = 20.0
text = "N"
align = 1
valign = 1

[node name="countDownLabel" type="Label" parent="."]
margin_left = -52.0
margin_top = -17.0
margin_right = -12.0
margin_bottom = -3.0
text = "1"
align = 1
valign = 1
[connection signal="button_down" from="yes" to="." method="_on_yes_button_down"]
[connection signal="focus_entered" from="yes" to="." method="_on_yes_focus_entered"]
[connection signal="focus_exited" from="yes" to="." method="_on_yes_focus_exited"]
[connection signal="mouse_entered" from="yes" to="." method="_on_yes_mouse_entered"]
[connection signal="mouse_exited" from="yes" to="." method="_on_yes_mouse_exited"]
[connection signal="pressed" from="yes" to="." method="_on_yes_pressed"]
[connection signal="focus_entered" from="no" to="." method="_on_no_focus_entered"]
[connection signal="focus_exited" from="no" to="." method="_on_no_focus_exited"]
[connection signal="mouse_entered" from="no" to="." method="_on_no_mouse_entered"]
[connection signal="mouse_exited" from="no" to="." method="_on_no_mouse_exited"]
[connection signal="pressed" from="no" to="." method="_on_no_pressed"]
